--- a/ranking.html
+++ b/ranking.html
@@ -1,23 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vote for Your Meal</title>
-    <script src="script.js" defer></script>
-</head>
-<body>
+<div class="food-item">
+    <h3>🍕 Pizza</h3>
+    <button onclick="vote('pizza', 1)">👍 Upvote</button>
+    <button onclick="vote('pizza', -1)">👎 Downvote</button>
+    <p>Votes: <span id="pizza-votes">0</span></p>
+</div>
 
-    <h1>Vote for Today's Meal</h1>
+<div class="food-item">
+    <h3>🍔 Burger</h3>
+    <button onclick="vote('burger', 1)">👍 Upvote</button>
+    <button onclick="vote('burger', -1)">👎 Downvote</button>
+    <p>Votes: <span id="burger-votes">0</span></p>
+</div>
 
-    <!-- Voting Options -->
-    <div id="voteContainer">
-        <button class="voteButton" data-meal="Pasta">🍝 Pasta <span id="pastaVotes">0</span></button>
-        <button class="voteButton" data-meal="Salad">🥗 Salad <span id="saladVotes">0</span></button>
-        <button class="voteButton" data-meal="Pizza">🍕 Pizza <span id="pizzaVotes">0</span></button>
-    </div>
+<script>
+  // Load votes from LocalStorage or default to 0
+  let votes = JSON.parse(localStorage.getItem("votes")) || { pizza: 0, burger: 0 };
 
-    <p id="voteMessage">Click a meal to vote!</p>
+  // Function to handle votes
+  function vote(food, change) {
+      votes[food] += change;
+      localStorage.setItem("votes", JSON.stringify(votes)); // Save votes
+      updateVotes();
+  }
 
-</body>
-</html>
+  // Update displayed votes
+  function updateVotes() {
+      document.getElementById("pizza-votes").textContent = votes.pizza;
+      document.getElementById("burger-votes").textContent = votes.burger;
+  }
+
+  updateVotes(); // Load votes on page load
+</script>
