--- a/PledgeAndGame.html
+++ b/PledgeAndGame.html
@@ -75,7 +75,7 @@
  </iframe>
   
 
-    <a href="https://example.com/" target="_blank">Learn more here!</a>
+    <a href="https://example.com/" target="_blank">Learn more here!</a><!--add link-->
     <script>
         function makePledge() {
             let name = document.getElementById("nameInput").value.trim();
