--- a/PledgeAndGame.html
+++ b/PledgeAndGame.html
@@ -66,7 +66,7 @@
     <br>
     
     <h1>Sustainable Food Game</h1>
-    <h2>Made by Ivana and Sundew</h2>
+    <h2>Made by Sundew Gupta and Ivana Mohapatra</h2>
   <h2>Instructions to play:</h2>
     <p>Read the statement and select True or False to input your answer. Answer all questions right to win!</p>
     
