--- a/PledgeAndGame.html
+++ b/PledgeAndGame.html
@@ -93,7 +93,7 @@
  <br>
  <br>
  
-    <a href="https://example.com/" target="_blank">Learn more here!</a><!--add link-->
+    <a href="https://sdgs.un.org/goals/goal2" target="_blank">Learn more here!</a><!--add link-->
     
     <script>
         function makePledge() {
