--- a/PledgeAndGame.html
+++ b/PledgeAndGame.html
@@ -43,6 +43,18 @@
             margin-top: 20px;
             font-weight: bold;
         }
+
+        a:link {
+            color: rgb(169, 169, 169);
+            background-color: transparent;
+            text-decoration: underline;
+            }
+        
+        a:hover {
+          color: rgb(128, 128, 128);
+          background-color: transparent;
+          text-decoration: underline;
+        }
         
     </style>
 </head>
